# pdfslides

./: README.md  pyproject.toml
pdfslides/: __main__.py  cli.py
